--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js"
   },
+  "proxy": "http://localhost:3090/",
   "keywords": [],
   "author": "",
   "license": "ISC",
